depends_core/src/macros/leaf/snapshots/depends_core__macros__leaf__derive__tests__leaf_generics.snap
---
source: depends_core/src/macros/leaf/derive.rs
assertion_line: 140
expression: format_source(derive_leaf(input).to_string().as_str())
---
impl<T> ::depends::core::Named for Foo<T> {
    fn name() -> &'static str {
        "Foo"
    }
}
impl<T> Foo<T> {
    pub fn into_leaf(self) -> ::std::sync::Arc<::depends::core::LeafNode<Self>> {
        ::depends::core::LeafNode::new(self)
    }
}
impl<T> ::depends::core::HashValue for Foo<T> {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}
impl<T> ::depends::core::Clean for Foo<T> {
    fn clean(&mut self) {}
}

